Fix the problem that the icon is not centered vertically. (#315)

--- a/styles/sidenav.less
+++ b/styles/sidenav.less
@@ -58,6 +58,7 @@
       position: absolute;
       left: @sidenav-padding-horizonal;
       top: @sidenav-padding-vertical;
+      line-height: @sidenav-level1-item-line-height;
     }
   }
 
